--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "pinia": "^2.0.17",
     "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "vuejs-confirm-dialog": "^0.5.0"
   },
   "devDependencies": {
     "@vicons/ionicons5": "^0.12.0",
