--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "vuejs-confirm-dialog": "^0.5.0"
   },
   "devDependencies": {
+    "@vicons/fluent": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
     "@vitejs/plugin-vue": "^4.1.0",
     "naive-ui": "^2.32.1",
