--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "chart.js": "^4.3.0",
     "pinia": "^2.0.17",
     "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.2.47",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.1.3",
     "vuejs-confirm-dialog": "^0.5.0"
   },
