--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "@studiometa/vue-mapbox-gl": "^2.1.1",
     "axios": "^1.3.4",
+    "mapbox-gl": "^2.14.1",
     "pinia": "^2.0.17",
     "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.2.47",
