--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,9 @@
   },
   "dependencies": {
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
-    "@studiometa/vue-mapbox-gl": "^2.1.1",
     "axios": "^1.3.4",
-    "mapbox-gl": "^2.14.1",
     "chart.js": "^4.3.0",
+    "mapbox-gl": "^2.14.1",
     "pinia": "^2.0.17",
     "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.2.47",
@@ -22,6 +21,7 @@
     "vuejs-confirm-dialog": "^0.5.0"
   },
   "devDependencies": {
+    "@types/mapbox-gl": "^2.7.11",
     "@vicons/fluent": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
     "@vitejs/plugin-vue": "^4.1.0",
