--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@types/mapbox-gl": "^2.7.11",
     "@vicons/fluent": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
+    "@vicons/material": "^0.12.0",
     "@vitejs/plugin-vue": "^4.1.0",
     "naive-ui": "^2.32.1",
     "vfonts": "^0.0.3",
