--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mapbox/mapbox-gl-draw": "^1.4.1",
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
+    "@turf/turf": "^6.5.0",
     "axios": "^1.3.4",
     "chart.js": "^4.3.0",
     "mapbox-gl": "^2.14.1",
@@ -28,6 +29,7 @@
     "@vicons/material": "^0.12.0",
     "@vitejs/plugin-vue": "^4.1.0",
     "naive-ui": "^2.32.1",
+    "unplugin-auto-import": "^0.16.2",
     "vfonts": "^0.0.3",
     "vite": "^4.2.0"
   }
